@@ -1,3 +1,6 @@
+2012-01-30  Kirit Saelensminde  <kirit@felspar.com>
+ MSVC 10 supports stdint.h so changed the configuration to use that.
+
 2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
  Fixed up the fost-exe build target type so the fost-cli library is properly installed.
 
